// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Standfirst renders as h4 html tag 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 1px 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.25em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

<h4
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Standfirst renders as span html tag 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 1px 0;
  display: inline-block;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.25em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Standfirst renders with custom style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #2F75D7;
  font-family: "Noto Sans",sans-serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 1px 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.25em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

<h2
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Standfirst renders with custom type preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 1px 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

<h2
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Standfirst renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 1px 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.25em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

<h2
    class="emotion-0"
  />
</DocumentFragment>
`;
